fix: address review findings for type() implementation
- Validate type() takes no arguments (throws InvalidExpressionException)
- Fix plural choice types (component.value.type()) with element-wise
  transform via new "typeChoicePlural" codegen path
- Use LinkedHashMap in InlineChoiceType for deterministic variant ordering
- Add tests for plural choice type and argument validation (54 total)

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>