@@ -1,6 +1,8 @@
 package com.example.fhirpath.typing;
 
 import jakarta.annotation.Nonnull;
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -28,7 +30,7 @@ public final class InlineChoiceType implements ChoiceTypeLike {
   public InlineChoiceType(
       @Nonnull final String elementName, @Nonnull final Map<String, FieldSpec> variants) {
     this.elementName = elementName;
-    this.variants = Map.copyOf(variants);
+    this.variants = Collections.unmodifiableMap(new LinkedHashMap<>(variants));
   }
 
   @Override
